feat: add gsd docs

--- a/.planning/phases/02-forum-browsing/02-02-PLAN.md
+++ b/.planning/phases/02-forum-browsing/02-02-PLAN.md
@@ -13,6 +13,7 @@ must_haves:
     - User can see which board is currently selected
     - User has quick access to change boards while viewing threads
     - App bar shows current board name when board is selected
+    - Thread list displays threads when board is selected
   artifacts:
     - path: nga_app/lib/screens/forum_screen.dart
       provides: "Board header showing current board"
@@ -107,15 +108,16 @@ Output:
 
 <verification>
 1. Run `cd nga_app && fvm flutter analyze` - no errors
-2. Select a board from drawer
-3. App bar shows the board name
-4. ForumContent shows header with board name
-5. "切换版块" button reopens the drawer
+2. Select a board from drawer - app bar shows the board name
+3. ForumContent shows header with board name above thread list
+4. Thread list displays actual threads (not empty state) - CONFIRM threads render
+5. "切换版块" button reopens the drawer for quick switching
 </verification>
 
 <success_criteria>
 - [ ] App bar displays current board name when board selected
 - [ ] ForumContent shows header above thread list
+- [ ] Thread list actually renders threads when board selected
 - [ ] Header button opens drawer for board switching
 - [ ] flutter analyze passes
 </success_criteria>
