--- a/.planning/phases/02-forum-browsing/02-03-PLAN.md
+++ b/.planning/phases/02-forum-browsing/02-03-PLAN.md
@@ -97,22 +97,21 @@ Output: Verified and polished MenuDrawerGrid with:
 </task>
 
 <task type="auto">
-  <name>Fix any issues found</name>
+  <name>Fix icon loading, layout, and dark mode issues</name>
   <files>nga_app/lib/screens/widgets/menu_drawer_grid.dart</files>
   <action>
-    Based on findings from tasks 1 and 2, fix any issues:
+    Address these three specific areas:
 
-    Common issues to check and fix:
-    - Null safety issues
-    - Animation timing
-    - Icon loading errors
-    - Layout issues on different screen sizes
-    - Dark mode colors
+    1. **Icon loading errors**: Check network icon loading with error fallback. Ensure CachedNetworkImage or Image.network has errorBuilder for failed loads. Verify placeholder displays correctly.
 
-    Run flutter analyze and fix any warnings/errors.
+    2. **Layout issues on different screen sizes**: Check GridView.count crossAxisCount responsiveness. Ensure board cards wrap properly on various screen widths. Verify padding and spacing are consistent.
+
+    3. **Dark mode colors**: Check all hardcoded colors that should use Theme.of(context). Fix text colors, border colors, and background colors that may not adapt to dark theme. Ensure CategoryHeader and BoardCard use proper theme-aware colors.
+
+    Run `flutter analyze` and fix any warnings/errors. Focus on these three areas only.
   </action>
   <verify>flutter analyze passes with no warnings</verify>
-  <done>All issues in MenuDrawerGrid are fixed</done>
+  <done>Icon loading, responsive layout, and dark mode support are fixed</done>
 </task>
 
 </tasks>
@@ -124,6 +123,8 @@ Output: Verified and polished MenuDrawerGrid with:
 4. Tap a board - it highlights and drawer closes
 5. Reopen drawer - previously selected board is highlighted
 6. Check dark mode support works
+7. Check icons load with error fallback
+8. Check layout on different screen sizes
 </verification>
 
 <success_criteria>
@@ -131,6 +132,8 @@ Output: Verified and polished MenuDrawerGrid with:
 - [ ] Categories expand/collapse with smooth animation
 - [ ] Active board is visually highlighted
 - [ ] Tapping board closes drawer and shows threads
+- [ ] Icons load with proper error fallback
+- [ ] Responsive layout on different screen sizes
 - [ ] Dark mode colors work correctly
 </success_criteria>
 
